Removed final.zip

--- a/Final/style.css
+++ b/Final/style.css
@@ -1,9 +1,8 @@
-
+<!DOCTYPE html>
 <link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700' rel='stylesheet' type='text/css'>
 <style>
 
 	header {
-		<link rel="shortcut icon" href="http://2.bp.blogspot.com/-V7Ui2zipbM8/VkJ9MGDNMRI/AAAAAAACXY8/dKxLtH_pU1o/s1600/favicon.ico">
 		background-image: img src= "http://4.bp.blogspot.com/-xjl8-0ELmjc/VkJ9I-h4ayI/AAAAAAACXX4/pZ7G9EOi_WU/s1600/Frish-Smaller.png";
 		text-align: center;
 	}
