Fixed background image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 		Body {
 		text-align: center;
-		background: url("/Users/LaFrish/wdi/Farishta-Portfolio/1167-withouttext.png");
+		background: url("1167-withouttext.png");
 		font-family: 'Playfair Display', serif;
 		color: #ffffff;
 		position: center;
