--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,44 +1,32 @@
-<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700' rel='stylesheet' type='text/css'>
+link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700'
 
-	head {
-
-	}
-
-		Body {
-		text-align: center;
-		background: url("1167-withouttext.png");
-		font-family: 'Playfair Display', serif;
-		color: #ffffff;
-		position: center;
-	}
+body {
+	background: url("file://~1167-withouttext.png");
+}
 h1 {
-			margin-top: 35px;
-			text-align: center;
-			font-size: 72px;
-			font-family: 'Playfair Display', serif;
+	margin-top: 35px;
+	text-align: center;
+	font-size: 72px;
+	font-family: 'Playfair Display', serif;
 }
-ul#tabs {
-    list-style-type: none;
-    padding: 0;
-    text-align: center;
+
+button {
+	vertical-align: middle;
+	text-align: center;
+	display: inline-block;
+	margin: inherit;
+	width:150px;
+	height: 50px;
+  cursor: pointer;
+	border-radius: .5em;
+	font-family: 'Abril Fatface', serif;
+	font-size: 16px;
+	background-color: #E6B72D;
+	border-color: #f91791;
+	color: #C22E75;
+	box-shadow: 0 0 40px 40px #f1c40f inset, 0 0 0 0 #ff5858;
+	transition: all 150ms ease-in-out;
 }
-ul#tabs li {
-    display: inline-block;
-		width:175px;
-    background-color: #E6B72D;
-    padding: 5px 20px;
-    margin-bottom: 20px;
-		margin-top: 20px;
-		    margin-bottom: 20px;
-    color: #ffffff;
-    cursor: pointer;
-		border-radius: 15px;
-			font-family: 'Abril Fatface', cursive;
-		font-size: 16px;
+button:hover {
+	box-shadow: 0 0 10px 0 #ff5858 inset, 0 0 10px 0 #f1c40f;
 }
-ul#tabs li:hover {
-    background-color: ##CCFFCC;
-}
-ul#tabs li.active {
-    background-color: #ffffff;
-		color: #E6B72D;
