corrected merge conflict

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("/Users/LaFrish/wdi/LaFrish.github.io/assets/1167.png");
+	background-image: url("1167-withouttext.png");
 }
 
 h1 {
