--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .headerimg {
   width: 310px;
   height: 300px;
-  background: url("http://i.imgur.com/oMiKGyW.png");
+  background: url("http://i.imgur.com/ifckBKU.png");
   background-position: -4960px;
   position: absolute;
   margin: auto;
