--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -57,7 +57,7 @@
 }
 
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -71,8 +71,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
@@ -83,7 +83,7 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
@@ -171,7 +171,7 @@ header h1 {
   text-transform: uppercase;
   color: #ece4d8;
   text-align: center;
-  line-height:1;  
+  line-height:1;
   padding: 14px 20px 0;
 }
 
@@ -468,7 +468,7 @@ dd p:first-child {
 
 .header-level-1 {
   font-size: 1.85em;
-  border-bottom: .2em double #d3ccc1;
+  /*border-bottom: .2em double #d3ccc1;*/
   color: #7c334f;
   text-align: center;
   font-style: italic;
@@ -481,7 +481,7 @@ dd p:first-child {
   font-size: 1.58em;
   color: #7c334f;
   margin: .95em 0 .5em;
-  border-bottom: .1em solid #D3CCC1;
+  /*border-bottom: .1em solid #D3CCC1;*/
   line-height: 1.2;
   padding-bottom: 10px
 }
